@@ -7,6 +7,8 @@ PHP                                                                        NEWS
     arguments). (cmb)
   . Fixed bug #76392 (Error relocating sapi/cli/php: unsupported relocation
     type 37). (Peter Kokot)
+  . The declaration and use of case-insensitive constants has been deprecated.
+    (Nikita)
 
 - Filter:
   . Added the 'add_slashes' sanitization mode (FILTER_SANITIZE_ADD_SLASHES). 
